@@ -167,6 +167,10 @@ statdb_node_apply(const char *filename, struct file_stat *filestat)
 		ohshite(_("error setting ownership of `%.255s'"), filename);
 	if (chmod(filename, filestat->mode))
 		ohshite(_("error setting permissions of `%.255s'"), filename);
+
+	dpkg_selabel_load();
+	dpkg_selabel_set_context(filename, filename, filestat->mode);
+	dpkg_selabel_close();
 }
 
 static void
