@@ -77,6 +77,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     Based on a patch by Johannes Schauer <j.schauer@email.de>.
   * Add ‘.mailmap’ to the default dpkg-source ignore lists.
   * Remove old trigger related Breaks and Conflicts from dpkg.
+  * Set the SE Linux context on «dpkg-statoverride --update». Closes: #690361
 
   [ Raphaël Hertzog ]
   * Drop myself from Uploaders.
